# cattle-face-identification

./: .gitignore  .zenodo.json  CITATION.cff  DATA_ACCESS.md  DATA_LICENSE.md  LICENSE  PUBLICATION_STATUS.json  README.md  pyproject.toml  reproduce.ps1  reproduce.sh  requirements-colab.txt  requirements.in
configs/: cattlessfr.yaml  cattlessfr_colab.yaml  cattlessfr_colab_proplus.yaml  cattlessfr_hardening_v2_colab_proplus.yaml  experiment_matrix_100.yaml  experiment_matrix_hardening_v2.yaml  experiment_matrix_holstein_hardening_v2.yaml  experiment_matrix_open_set.yaml  experiment_matrix_paper_baseline_final.yaml  experiment_matrix_primary_final.yaml  external_acquisition.yaml  external_public_face_benchmark.yaml  final_evidence_scope.yaml  final_evidence_scope_hardening_v2.yaml  holstein2025_colab_proplus.yaml  holstein2025_open_set.yaml  masking_annotations.schema.yaml
docs/: DATASET_CARD.md  MODEL_CARD.md  a100_h100_execution_runbook.md  a100_h100_open_set_runbook.md  a100_h100_paper_baseline_final_runbook.md  a100_h100_primary_final_runbook.md  external_acquisition_collection_protocol.md  hardening_v2_colab_runbook.md
notebooks/: colab_train.ipynb
scripts/: acquire_datasets.py
tests/: test_augmentation.py  test_build_hardening_visual_addendum.py  test_colab_runtime.py  test_config_overrides.py  test_data_pipeline.py  test_ensure_hardening_figure_inputs.py  test_evaluate.py  test_evidence_scope.py  test_external_acquisition.py  test_external_public_benchmark_summary.py  test_frozen_imagenet_sanity.py  test_hardening_evidence_summary.py  test_hashing.py  (+25 more)
(+119 files in other folders)
