[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cattle-face-identification"
version = "0.1.0"
description = "Reproducible CattleSSFR deep learning pipeline for cattle face identification."
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "Pillow",
  "PyYAML",
  "scikit-learn",
  "scikit-image",
  "ImageHash",
  "tensorflow",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
